# bili-video-notes

./: .gitignore  AGENTS.md  CLAUDE.md  DISTRIBUTION.md  README.md  SKILL.md  config.yaml  install.sh  pyproject.toml
scripts/: analyze_frames.py  common.py  extract_frames.py  fetch_data.py  generate_notes.py  pipeline.py  transcribe_audio.py
templates/: note_template.md
tests/: conftest.py  test_analyze_frames.py  test_extract_frames.py  test_fetch_data.py  test_generate_notes.py  test_pipeline.py  test_transcribe_audio.py
